force-app/main/default/objects/Band__c/Band__c.object-meta.xml
<CustomObject>
    <label>Band</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Band Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>