force-app/main/default/objects/Band__c/fields/Band_Active_Years__c.field-meta.xml
<CustomField>
    <fullName>Band_Active_Years__c</fullName>
    <formula>(ABS(YEAR(Year_Of_Foundation__c)-YEAR(Band_Closing_Year__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Band Active Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>