force-app/main/default/objects/Band__c/fields/Band_Closing_Year__c.field-meta.xml
<CustomField>
    <fullName>Band_Closing_Year__c</fullName>
    <label>Band Closing Year</label>
    <type>Date</type>
</CustomField>