force-app/main/default/objects/Band__c/fields/Closing_Date_On_Opening_Day__c.field-meta.xml
<CustomField>
    <fullName>Closing_Date_On_Opening_Day__c</fullName>
    <label>Closing Date On Opening Day</label>
    <type>Date</type>
</CustomField>