force-app/main/default/objects/Band__c/fields/IsGroupExistOneDay__c.field-meta.xml
<CustomField>
    <fullName>IsGroupExistOneDay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsGroupExistOneDay</label>
    <type>Checkbox</type>
</CustomField>