force-app/main/default/objects/Band__c/fields/Total_Songs_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_Songs_Duration__c</fullName>
    <label>Total Songs Duration</label>
    <summarizedField>Song__c.Duration__c</summarizedField>
    <summaryForeignKey>Song__c.Band__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>