force-app/main/default/objects/Band__c/fields/Total_Songs_Number__c.field-meta.xml
<CustomField>
    <fullName>Total_Songs_Number__c</fullName>
    <label>Total Songs Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>