force-app/main/default/objects/Band__c/fields/Year_Of_Foundation__c.field-meta.xml
<CustomField>
    <fullName>Year_Of_Foundation__c</fullName>
    <label>Year Of Foundation</label>
    <type>Date</type>
</CustomField>