force-app/main/default/objects/Band__c/validationRules/The_closing_date_cannot_be_earlier.validationRule-meta.xml
<ValidationRule>
    <fullName>The_closing_date_cannot_be_earlier</fullName>
    <active>true</active>
    <description>The closing date cannot be earlier than the creation date.</description>
    <errorConditionFormula>Band_Closing_Year__c &lt;= Year_Of_Foundation__c</errorConditionFormula>
    <errorMessage>The closing date cannot be earlier than the creation date.</errorMessage>
</ValidationRule>